--- a/style/slides.scss
+++ b/style/slides.scss
@@ -36,3 +36,8 @@
     background-color: #51b3da50;
   }
   
+  .reveal .slide .learn-more {
+    text-align: center;
+    font-family: $font-family-monospace;
+    padding-bottom: 10px;
+  }
